// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconTextField /> renders correctly 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontFamily": "Nunito-Bold",
          },
        ]
      }
    >
      Field: 
    </Text>
  </View>
  <View
    style={
      {
        "paddingLeft": 24,
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    >
      Info
    </Text>
  </View>
</View>
`;

exports[`<IconTextFieldRow /> renders correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 24,
        },
        {
          "marginHorizontal": 4,
        },
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="icon"
  >
    
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        {
          "writingDirection": "ltr",
        },
        {
          "flex": 1,
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    Field: 
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    >
      Info
    </Text>
  </Text>
</View>
`;

exports[`<KeyTextField /> renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F8F9FD",
      "borderRadius": 10,
      "height": 80,
      "padding": 8,
      "width": 85,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "flex": 1,
          "fontFamily": "Nunito-Medium",
        },
      ]
    }
  >
    Field
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "flex": 1,
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    Info
  </Text>
</View>
`;
